--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "assets-webpack-plugin": "^3.9.7",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^5.0.0",
     "cross-env": "^5.2.0",
@@ -41,6 +42,8 @@
     "file-loader": "^3.0.0",
     "hugo-bin": "^0.37.0",
     "imports-loader": "^0.8.0",
+    "ionicons": "^4.5.5",
+    "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.5",
