--- a/package.json
+++ b/package.json
@@ -63,6 +63,10 @@
     "webpack-merge": "^4.1.4",
     "whatwg-fetch": "^3.0.0"
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "resolutions": {
     "natives": "1.1.6"
   }
