--- a/site/config.toml
+++ b/site/config.toml
@@ -16,22 +16,22 @@ disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
   post = "/:year/:month/:day/:slug"
 
 [params]
-  avatar = "profile.png"
-  author = "Chris Turner"
-  description = "Describe your website"
+  avatar = "profile.jpg"
+  author = "Gabriel Araujo"
+  description = "My personal website"
 
   # Custom assets can be linked with their paths relative to static/
   custom_css = []
   custom_js  = []
 
 [params.social]
-  Github        = "username"
-  Email         = "email@example.com"
-  Twitter       = "username"
-  LinkedIn      = "username"
-  Stackoverflow = "username"
-  Medium        = "username"
-  Telegram      = "username"
+  Github        = "gabrielaraujof"
+  Email         = "contato@gabrielaraujo.dev"
+  Twitter       = "gabrielfeear"
+  LinkedIn      = "gabrielaraujof"
+  Stackoverflow = "gabrielaraujof"
+  Medium        = "gabrielaraujof"
+  Telegram      = "gabrielaraujof"
 
 ## Main Menu
 [[menu.main]]
